# llm_engineering

./: pyproject.toml  requirements.txt
fine tuning/: bert_finetuning.ipynb
fine tuning/data/: test.json  test.jsonl  train.json  train.jsonl  validation.json  validation.jsonl
week1/: day1.ipynb  day5.ipynb
week2/: day1.ipynb
week6/: day1.ipynb
