[tool.poetry]
name = "llm-engineering"
version = "0.1.0"
description = ""
authors = ["subratamondal1 <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
jupyterlab = "^4.3.0"
ipywidgets = "^8.1.5"
requests = "^2.32.3"
numpy = "^1.19.0"
pandas = "^2.2.3"
scipy = "1.13.0"
scikit-learn = "^1.5.2"
matplotlib = "3.5.3"
torch = "2.2.2"
gensim = "^4.3.3"
transformers = "^4.46.1"
accelerate = "^1.1.0"
sentencepiece = "^0.2.0"
tqdm = "^4.66.6"
openai = "^1.53.0"
langchain = "^0.3.7"
tiktoken = "^0.8.0"
faiss-cpu = "^1.9.0"
langchain-openai = "^0.2.5"
langchain-experimental = "^0.3.3"
langchain-chroma = "^0.1.4"
datasets = "^3.1.0"
google-generativeai = "^0.8.3"
anthropic = "^0.38.0"
chromadb = "^0.5.17"
plotly = "^5.24.1"
jupyter-dash = "^0.4.2"
beautifulsoup4 = "^4.12.3"
pydub = "^0.25.1"
bitsandbytes = "0.42.0"
docarray = "^0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
